# vsqfx

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
docker/: Dockerfile
src-offscreen/: CMakeLists.txt  bindings.h  bindings.xml  offscreen_render_control.cpp  offscreen_render_control.h  pyside_config.py
src/vsqfx/: __init__.py
