[project]
name = "vsqfx"
readme = "README.md"
requires-python = ">=3.11"
license = { "file" = "LICENSE" }
authors = [{ "name" = "Andrew Wason", "email" = "rectalogic@rectalogic.com" }]
keywords = ["vapoursynth", "qml", "pyside6"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
]
urls = { "Documentation" = "https://github.com/rectalogic/vsqfx" }
dependencies = []
dynamic = ["version", "description"]

[build-system]
requires = ["py-build-cmake~=0.1.8", "shiboken6~=6.1.0"]
build-backend = "py_build_cmake.build"

[tool.py-build-cmake.module]
directory = "src"

[tool.py-build-cmake.sdist]
include = ["src-offscreen/CMakeLists.txt", "src-offscreen/*"]

[tool.py-build-cmake.cmake]
minimum_version = "3.18"
build_type = "RelWithDebInfo"
source_path = "src-offscreen"
build_args = ["-j"]
install_components = ["python_modules"]

[tool.py-build-cmake.stubgen]
