[project]
name = "vsqfx"
readme = "README.md"
requires-python = ">=3.8"
license = { "file" = "LICENSE" }
authors = [{ "name" = "Andrew Wason", "email" = "rectalogic@rectalogic.com" }]
keywords = ["vapoursynth", "qml", "pyside6"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
]
urls = { "Documentation" = "https://github.com/rectalogic/vsqfx" }
dependencies = []
dynamic = ["version", "description"]

[build-system]
requires = [
    "py-build-cmake~=0.1.8",
    "PySide6-Essentials~=6.5.0",
    "shiboken6~=6.5.0",
    "shiboken6-generator~=6.5.0", #XXX must use PIP_EXTRA_INDEX_URL=https://download.qt.io/official_releases/QtForPython/
]
build-backend = "py_build_cmake.build"

[tool.py-build-cmake.module]
directory = "src"

[tool.py-build-cmake.sdist]
include = ["src-offscreen/CMakeLists.txt", "src-offscreen/*"]

[tool.py-build-cmake.cmake]
minimum_version = "3.18"
build_type = "RelWithDebInfo"
source_path = "src-offscreen"
build_args = ["-j"]
install_components = ["python_modules"]
